# Talleres/TallerApiRest/go_server/main.go
@@ -33,9 +33,9 @@ func main() {
 //user the prefix "/api/v1/user"
 func defineUserEndpoints(userRouter *mux.Router) {
 	userRouter.HandleFunc("/users", handlers.GetUsersHandler).Methods("GET")
-	userRouter.HandleFunc("/newUser", handlers.PostUserHandler).Methods("POST")
-	userRouter.HandleFunc("/deleteUser", handlers.DeleteUserHandler).Methods("DELETE")
-	userRouter.HandleFunc("/updateUser", handlers.PostUserHandler).Methods("PUT")
+	userRouter.HandleFunc("/user", handlers.PostUserHandler).Methods("POST")
+	userRouter.HandleFunc("/user", handlers.DeleteUserHandler).Methods("DELETE")
+	userRouter.HandleFunc("/user", handlers.PostUserHandler).Methods("PUT")
 }
 
 func defineLoginRegisterEndpoints(loginRouter *mux.Router) {
